# bevy_smuggle

./: Cargo.toml  README.md
examples/: custom_runner.rs
src/: lib.rs  params.rs  static_ref.rs
