[package]
name = "bevy_smuggle"
version = "0.0.1"
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = { git = "https://github.com/bevyengine/bevy", rev = "5ba2b9adcf5e686273cf024acf1ad8ddfb4f8e18" }
# Can't use default-features = false - see https://github.com/bevyengine/bevy/pull/2842

[dev-dependencies]
bevy_app = { git = "https://github.com/bevyengine/bevy", rev = "5ba2b9adcf5e686273cf024acf1ad8ddfb4f8e18" }
